unpackaged/main/default/objects/sked_Site_Feedback__c/sked_Site_Feedback__c.object-meta.xml
<CustomObject>
    <label>Role Time Variance Feedback</label>
    <nameField>
        <displayFormat>SF-{000000}</displayFormat>
        <label>Site Feedback Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Role Time Variance Feedback</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>