unpackaged/main/default/objects/sked_Site_Feedback__c/fields/sked_Amount__c.field-meta.xml
<CustomField>
    <fullName>sked_Amount__c</fullName>
    <label>Amount (minutes)</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>