unpackaged/main/default/objects/sked_Site_Feedback__c/fields/sked_Buffer_Type__c.field-meta.xml
<CustomField>
    <fullName>sked_Buffer_Type__c</fullName>
    <label>Buffer Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Add</fullName>
            </value>
            <value>
                <fullName>Subtract</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>