unpackaged/main/default/objects/sked_Site_Feedback__c/fields/sked_DM_Approver__c.field-meta.xml
<CustomField>
    <fullName>sked_DM_Approver__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>DM Approver</label>
    <referenceTo>User</referenceTo>
    <relationshipName>sked_Site_Feedback</relationshipName>
    <type>Lookup</type>
</CustomField>