unpackaged/main/default/objects/sked_Site_Feedback__c/fields/sked_Drive__c.field-meta.xml
<CustomField>
    <fullName>sked_Drive__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Drive</label>
    <referenceTo>sked_Drive__c</referenceTo>
    <relationshipLabel>Role Time Variance Feedback</relationshipLabel>
    <relationshipName>sked_Role_Time_Variance_Feedback</relationshipName>
    <type>Lookup</type>
</CustomField>