unpackaged/main/default/objects/sked_Site_Feedback__c/fields/sked_Drive_Date_Text__c.field-meta.xml
<CustomField>
    <fullName>sked_Drive_Date_Text__c</fullName>
    <formula>sked_Drive__r.sked_Drive_Date_Text__c</formula>
    <label>Drive Date Text</label>
    <type>Text</type>
</CustomField>