unpackaged/main/default/objects/sked_Site_Feedback__c/fields/sked_Drive_Name__c.field-meta.xml
<CustomField>
    <fullName>sked_Drive_Name__c</fullName>
    <formula>sked_Drive__r.Name</formula>
    <label>Drive Name</label>
    <type>Text</type>
</CustomField>