unpackaged/main/default/objects/sked_Site_Feedback__c/fields/sked_Job__c.field-meta.xml
<CustomField>
    <fullName>sked_Job__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Job</label>
    <referenceTo>sked__Job__c</referenceTo>
    <relationshipName>sked_Site_Feedbacks</relationshipName>
    <type>Lookup</type>
</CustomField>