unpackaged/main/default/objects/sked_Site_Feedback__c/fields/sked_Reason__c.field-meta.xml
<CustomField>
    <fullName>sked_Reason__c</fullName>
    <label>Reason</label>
    <type>TextArea</type>
</CustomField>