unpackaged/main/default/objects/sked_Site_Feedback__c/fields/sked_Resource_Role_Group__c.field-meta.xml
<CustomField>
    <fullName>sked_Resource_Role_Group__c</fullName>
    <label>Resource Role Group</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>sked_Resource_Role_Group</valueSetName>
    </valueSet>
</CustomField>