unpackaged/main/default/objects/sked_Site_Feedback__c/fields/sked_Role_Time_Variance__c.field-meta.xml
<CustomField>
    <fullName>sked_Role_Time_Variance__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Role Time Variance</label>
    <referenceTo>sked_Role_Time_Variance__c</referenceTo>
    <relationshipLabel>Role Time Variance Feedback</relationshipLabel>
    <relationshipName>Role_Time_Variance_Feedback</relationshipName>
    <type>Lookup</type>
</CustomField>