unpackaged/main/default/objects/sked_Site_Feedback__c/fields/sked_Site__c.field-meta.xml
<CustomField>
    <fullName>sked_Site__c</fullName>
    <label>Site</label>
    <referenceTo>sked__Location__c</referenceTo>
    <relationshipName>sked_Site_Feedback</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>