unpackaged/main/default/objects/sked_Site_Feedback__c/fields/sked_Site_Name__c.field-meta.xml
<CustomField>
    <fullName>sked_Site_Name__c</fullName>
    <formula>sked_Site__r.Name</formula>
    <label>Site Name</label>
    <type>Text</type>
</CustomField>