unpackaged/main/default/objects/sked_Site_Feedback__c/fields/sked_Status__c.field-meta.xml
<CustomField>
    <fullName>sked_Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Submitted</fullName>
                <default>true</default>
                <label>Not Submitted</label>
            </value>
            <value>
                <fullName>Submitted</fullName>
            </value>
            <value>
                <fullName>Waiting for DM Approval</fullName>
            </value>
            <value>
                <fullName>Waiting for CO Supervisor Approval</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>Waiting for AP&amp;S Approval</fullName>
                <isActive>false</isActive>
                <label>Waiting for AP&amp;S Approval</label>
            </value>
            <value>
                <fullName>Waiting for APS Approval</fullName>
                <isActive>false</isActive>
                <label>Waiting for APS Approval</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>