unpackaged/main/default/objects/sked_Site_Feedback__c/fields/sked_Variance_Applies_To__c.field-meta.xml
<CustomField>
    <fullName>sked_Variance_Applies_To__c</fullName>
    <label>Variance Applies to</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <controllingField>sked_Variance_Type__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Lead Time</fullName>
            </value>
            <value>
                <fullName>Setup Time</fullName>
            </value>
            <value>
                <fullName>Breakdown Time</fullName>
            </value>
            <value>
                <fullName>Wrap-up Time</fullName>
            </value>
            <value>
                <fullName>Travel Time To</fullName>
            </value>
            <value>
                <fullName>Travel Time From</fullName>
            </value>
            <value>
                <fullName>Site Logistics To</fullName>
            </value>
            <value>
                <fullName>Site Logistics Back</fullName>
            </value>
            <value>
                <fullName>Travel Time</fullName>
                <isActive>false</isActive>
                <label>Travel Time</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>