unpackaged/main/default/objects/sked_Site_Feedback__c/fields/sked_Variance_Type__c.field-meta.xml
<CustomField>
    <fullName>sked_Variance_Type__c</fullName>
    <label>Variance Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Safety Video</fullName>
            </value>
            <value>
                <fullName>Security</fullName>
            </value>
            <value>
                <fullName>Loading/ unloading area</fullName>
            </value>
            <value>
                <fullName>Multiple rooms</fullName>
            </value>
            <value>
                <fullName>Parking</fullName>
            </value>
            <value>
                <fullName>Stairs</fullName>
            </value>
            <value>
                <fullName>Elevator</fullName>
            </value>
            <value>
                <fullName>Floor covering</fullName>
            </value>
            <value>
                <fullName>Construction</fullName>
            </value>
            <value>
                <fullName>Commercial Route</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Imported from Hemasphere</fullName>
            </value>
            <value>
                <fullName>Breakdown Time</fullName>
                <isActive>false</isActive>
                <label>Breakdown Time</label>
            </value>
            <value>
                <fullName>Lead Time</fullName>
                <isActive>false</isActive>
                <label>Lead Time</label>
            </value>
            <value>
                <fullName>Loading Dock</fullName>
                <isActive>false</isActive>
                <label>Loading Dock</label>
            </value>
            <value>
                <fullName>Parking Lot</fullName>
                <isActive>false</isActive>
                <label>Parking Lot</label>
            </value>
            <value>
                <fullName>Setup Time</fullName>
                <isActive>false</isActive>
                <label>Setup Time</label>
            </value>
            <value>
                <fullName>Travel Time</fullName>
                <isActive>false</isActive>
                <label>Travel Time</label>
            </value>
            <value>
                <fullName>Vehicle Inspection</fullName>
                <isActive>false</isActive>
                <label>Vehicle Inspection</label>
            </value>
            <value>
                <fullName>Wireless</fullName>
                <isActive>false</isActive>
                <label>Wireless</label>
            </value>
            <value>
                <fullName>Wrap-up Time</fullName>
                <isActive>false</isActive>
                <label>Wrap-up Time</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>