unpackaged/main/default/objects/sked_Site_Feedback__c/fields/sked_Variance_Type_Other__c.field-meta.xml
<CustomField>
    <fullName>sked_Variance_Type_Other__c</fullName>
    <label>Variance Type Other</label>
    <length>100</length>
    <type>Text</type>
</CustomField>