unpackaged/main/default/objects/sked_Site_Feedback__c/validationRules/ReasonRequiredForTypeOther.validationRule-meta.xml
<ValidationRule>
    <fullName>ReasonRequiredForTypeOther</fullName>
    <active>true</active>
    <errorConditionFormula>ISPICKVAL( sked_Variance_Type__c ,&#39;Other&#39;)
&amp;&amp; ISBLANK( sked_Reason__c )</errorConditionFormula>
    <errorMessage>Reason is required for Variance Type Other</errorMessage>
</ValidationRule>